# CME211

./: README.md  STUDENT
exam1/: README.md  gradbook.txt  gradebook.py  out  test_1.txt  test_1_out.txt  test_2.txt  test_2_out.txt
exam2/: CMakeLists.txt  README.md  Stock.cpp  Stock.hpp  main  main.cpp  makefile  results.txt  short_answers.md
exam2/scratc/student_starter_files/: Stock.hpp  main.cpp  msft_close.txt
hw0/: echo_commands.py
hw1/: README  README.md  align_1.txt  align_2.txt  align_3.txt  alignments0_ref.tt  generatedata.py  processdata.py  reads0.txt  reads_1.txt  reads_2.txt  reads_3.txt  ref_1.txt  ref_2.txt  ref_3.txt  reference0.txt  test  test_read  test_ref
hw2/: README  README.md  out  out.txt  similarity.py  test.data  test.out
hw3/: README.md  airfoil.py
hw4/: main.py  truss.py
hw5/: CMakeCache.txt  CMakeLists.txt  Makefile  README  checksoln.py  cmake_install.cmake  hw5  hw5.cbp  mazesolver.cpp  out
hw6/: CMakeLists.txt  README.md  hw6.cpp  image.cpp  image.hpp  main  main.cpp  makefile
project/: CGSolver.cpp  CGSolver.hpp  CMakeLists.txt  Makefile  bonus.py  cmake_install.cmake  heat.cpp  heat.hpp  main.cpp  makefile  matvecops.cpp  matvecops.hpp  postprocess.py  solution000.txt  solution010.txt  solution020.txt  solution030.txt  solution040.txt  solution050.txt  solution060.txt  solution070.txt  solution080.txt  solution090.txt  solution100.txt  solution110.txt  solution120.txt  solution130.txt  solution140.txt  solution150.txt  solution157.txt  sparse.cpp  sparse.hpp  test.py  writeup.aux  writeup.tex
